...
  }

  /// Ensure that the given email is present. We don't need to actually check that
  /// it's a valid email because Firebase will do that.
  String? validateEmail(String? email) {
    if (email == null || email.isEmpty) {
      return 'Please enter your email';
    } else {
      return null;
    }
  }

  /// Ensure that the given password is present.
  String? validatePassword(String? password) {
   if (password == null || password.isEmpty) {
      return 'Please enter a password';
    } else {
      return null;
    }
  }

  /// Check form validation, then try to sign in and redirect to the preferences page.
...
