...
        children: [
          Container(
            alignment: Alignment.center,
            color: Colors.green.shade50,
            height: 80,
            width: MediaQuery.of(context).size.width,
            child: Text("Restaurant List",
              style: TextStyle(
                    color: Colors.green.shade800,
                    fontSize: 30,
                    fontWeight: FontWeight.bold,
                  ),
            ),
...
