...
                  Column(children: [
                    Divider(height: size.height/30),
                    videoController.value.isInitialized ? video : placeholder,
                    Divider(height: size.height/10),
                    ElevatedButton(
                      onPressed: getRecommendation,
                      child: const Text('Go!', style: TextStyle(fontSize: 25)),
                      style: ElevatedButton.styleFrom(
                        primary: Colors.green.shade900,
                        padding: const EdgeInsets.symmetric(horizontal: 60, vertical: 20),
                        shadowColor: Colors.black
                      ),
                    )
...
